22 Apr 2006: Wouter
	- nsd-patch manual page.
	- minor MacOSX port fixes.

21 Apr 2006: Wouter
	- put NSEC3 code in nsec3.c and nsec3.h.
	- iterated_hash only adds the salt if salt_len > 0.
	- added some assertions and cleanups to nsec3 code.
	- prehash also calcs the nsec3_last domain*.
	- dbaccess when reading in will set the rr_type.owner value.
	- changed namedb_find_zone to domain_find_zone, log msgs.
	- implemented logic from nsec draft 05-pre2 section 5.4.1 - 5.4.8.
	  NSEC3 responses only happen for nsd compiled with --enable-nsec3
	  and for zones where an NSEC3 with the SOA bit set exists.
	- added prehash pointer to ds parent side cover for opt out.
	- removed dynamic plugins. Dynamic plugin support is an explicit 
	  non-requirement (under creeping featurism).
	- in domain table create root nsec3 ptrs are NULL.

20 Apr 2006: Wouter
	- Unittest of base 32 encoding. 
	- unittest start for iterated hash.
	- fixed for ctrlc in debug mode.
	- delete zparser_conv_long, not used, not needed
	- nsd-xfer will display NSEC3 correctly. zonec parses.
	- improved usage() line from zonec, about -c none, must be -C.
	- base32 printed in lowercase (canonical format for DNS).
	- NSEC3 added prehash pointers to the namedb.
	- NSEC3 autodetects presence of NSEC3 in zone and parameters.

19 Apr 2006: Wouter
	- port fix base10 in zonec conv short from 2_2 branch to trunk.
	  and conv byte, algo, certificate, long.
	- configure option to enable NSEC3 (--enable-nsec3) support.
	- from Ben Laurie's NSEC3 patch, loaned the parse code,
	  base32 conversion code and iterated_hash. 
	  With some small modifications. The type rrdescriptors are 
	  indexed by value below SPF, and in 
	  rdata_wireformat_to_rdata_atoms BINARYWITHLENGTH checks
	  for end of buffer. Also parser checks for '-' salt.
	  Some layout (spaces after ,s). And NSEC3 define is used.
	  strtol used for iterations is base 10.
	- moved rrtype descriptor table sanity check to unittest.

18 Apr 2006: Wouter