@@ -94,6 +94,7 @@ void config_test_print_server(nsd_options_t* opt)
 	print_string_var("zonesdir:", opt->zonesdir);
 	print_string_var("difffile:", opt->xfrdfile);
 	print_string_var("xfrdfile:", opt->xfrdfile);
+	printf("\txfrd_reload_timeout: %d\n", opt->xfrd_reload_timeout);
 
 	for(ip = opt->ip_addresses; ip; ip=ip->next)
 	{
